--- a/src/css/Carousel.css
+++ b/src/css/Carousel.css
@@ -1,5 +1,5 @@
 .carousel-item img {
-  max-height: 800px;
+  max-height: 1000px;
   object-fit: cover;
   padding-top: 60px;
 }
@@ -12,6 +12,10 @@
 .carousel-control-next-icon {
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .carousel-caption {
