--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,19 +1,8 @@
 footer {
-  background-color: #333;
-  color: #fff;
-  padding: 50px 0;
+  background-color: #294b29;
 }
 
-footer h3 {
-  color: #fff;
-}
-
-.social-links li {
-  display: inline;
-  margin-right: 10px;
-}
-
-.social-links a {
-  color: #fff;
+.footer li a {
   text-decoration: none;
+  color: white;
 }
