Add register, login with Routes

--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -11,3 +11,20 @@
 .nav-link {
   color: #fff !important;
 }
+.brand-image {
+  float: right;
+  line-height: 0.8;
+  margin-left: 0.8rem;
+  margin-right: 0.5rem;
+  margin-top: -3px;
+  max-height: 33px;
+  width: auto;
+}
+
+.img-circle {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
