--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -18,9 +18,6 @@
   font-size: 1.5rem;
 }
 
-.nav-link {
-  color: #fff !important;
-}
 .brand-image {
   float: right;
   line-height: 0.8;
@@ -37,4 +34,10 @@
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+.search-form {
+  width: 100%;
+  max-width: 500px; /* Adjust as needed */
+  display: flex;
+  justify-content: center;
 }
