--- a/src/css/ProductByCategory.css
+++ b/src/css/ProductByCategory.css
@@ -1,16 +1,16 @@
 * {
-    font-family:Georgia, 'Times New Roman', Times, serif
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-
+/* 
 .container {
-    margin: 25px 50px;
+  margin: 25px 50px;
 }
 
 .container h1 {
-    margin-top: 70px;
-}
+  margin-top: 70px;
+} */
 
 .card img {
-    width: 100%;
-    max-height: 100%;
+  width: 100%;
+  max-height: 100%;
 }
