--- a/src/css/ProductDetail.css
+++ b/src/css/ProductDetail.css
@@ -1,95 +1,95 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
 }
 
-.container {
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-}
+/* .container {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+} */
 
 .main-product {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 20px;
 }
 
 .product-details {
-    width: 35%;
+  width: 35%;
 }
 
 .product-name {
-    font-size: 24px;
-    margin: 0;
+  font-size: 24px;
+  margin: 0;
 }
 
-.product-pattern, .product-price {
-    margin: 10px 0;
+.product-pattern,
+.product-price {
+  margin: 10px 0;
 }
 
 .add-to-cart {
-    display: block;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    margin-top: 20px;
+  display: block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  margin-top: 20px;
 }
 
 .add-to-cart:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 .product-info {
-    margin-top: 20px;
-    border-bottom: 1px solid #ccc;
+  margin-top: 20px;
+  border-bottom: 1px solid #ccc;
 }
 
-
 h2 {
-    margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 .available-products {
-    margin-top: 35px;
-
+  margin-top: 35px;
 }
 
 .available-products h2 {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .products-slider {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .product-card {
-    width: 23%;
-    height: 100%;
-    background-color: #f5f5f5;
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #ccc;
+  width: 23%;
+  height: 100%;
+  background-color: #f5f5f5;
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #ccc;
 }
 
 .product-image-small {
-    width: 100%;
-    height: 100px;
-    background-color: #ccc;
-    margin-bottom: 10px;
+  width: 100%;
+  height: 100px;
+  background-color: #ccc;
+  margin-bottom: 10px;
 }
 
-.product-name-small, .product-price-small {
-    margin: 5px 0;
+.product-name-small,
+.product-price-small {
+  margin: 5px 0;
 }
