--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -6,7 +6,7 @@
   width: 100%;
   padding-top: 75px;
 }
-h1 {
+.h1 {
   text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding-bottom: 40px;
@@ -40,7 +40,7 @@ h1 {
   transform: scale(1.05);
   transition: transform 0.3s ease;
 }
-.card {
+/* .card {
   margin-bottom: 20px;
 }
 
@@ -60,7 +60,7 @@ h1 {
 
 .card:hover {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-}
+} */
 #our-products {
   padding: 20px;
 }
