--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -18,3 +18,18 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.smooth-shadow {
+  box-shadow: 0 1px 2px rgba(21, 30, 40, 0.07), 0 2px 4px rgba(21, 30, 40, 0.07),
+    0 4px 8px rgba(21, 30, 40, 0.07), 0 8px 16px rgba(21, 30, 40, 0.07),
+    0 16px 32px rgba(21, 30, 40, 0.07), 0 32px 64px rgba(21, 30, 40, 0.07) !important;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+}
+
+.card-outline {
+  border-top: 3px solid #198754;
+}
