--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -99,7 +99,7 @@
   margin: 0 auto;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  width: 50%; /* Mengatur lebar gambar menjadi 80% dari lebar kartu */
+  width: 50%; /* Mengatur lebar gambar menjadi 50% dari lebar kartu */
   height: 50%; /* Mengatur tinggi gambar agar proporsional */
 }
 
@@ -146,12 +146,15 @@
 /* Gaya khusus untuk kartu produk pada bagian Our Products */
 .our-products-section .our-produk-card {
   border-radius: 8px;
-  overflow: hidden;
-  background-color: #ffffff;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+    overflow: hidden;
+    background-color: #ffffff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border: 1px solid #ddd;
+    padding: 20px;
 }
 
 .our-products-section .our-produk-card:hover {
@@ -161,10 +164,9 @@
 
 /* Gaya untuk gambar di dalam kartu produk */
 .our-products-section .our-produk-card .card-img-top {
-  width: 100%;
-  height: 200px; /* Tinggi yang konsisten untuk semua gambar */
-  object-fit: cover;
-  border-bottom: 1px solid #ddd;
+  width: 13rem;
+  height: 12rem;
+  margin: 20px;
 }
 
 /* Gaya untuk judul dan teks di dalam kartu produk */
@@ -258,7 +260,8 @@
 
 .product img {
   width: 100%;
-  height: auto;
+  height: 200px; /* Tetapkan tinggi tetap */
+  object-fit: cover; /* Memastikan gambar tidak terpotong dan tetap proporsional */
 }
 
 .product-info {
