--- a/src/css/ProductByCategory.css
+++ b/src/css/ProductByCategory.css
@@ -1,9 +1,37 @@
+.container.container-pcategory {
+  padding: 35px;
+}
 .container-pcategory h1 {
   margin-top: 75px;
+  margin-bottom: 35px;
   text-align: center;
 }
 
-/* .card img {
+.card {
+  padding-top: 25px;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #ffffff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+/* Styling for the image inside the product card */
+.card .card-img-top{
   width: 100%;
+  height: 200px;
+  max-width: 100%;
   max-height: 100%;
-} */
+  object-fit: contain;
+  margin: auto;
+}
