--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -168,9 +168,12 @@
 
 /* Gaya untuk gambar di dalam kartu produk */
 .our-products-section .our-produk-card .card-img-top {
-  width: 13rem;
-  height: 12rem;
-  margin: 20px;
+  width: 100%;
+  height: 200px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  margin: auto;
 }
 
 /* Gaya untuk judul dan teks di dalam kartu produk */
