--- a/src/css/Carousel.css
+++ b/src/css/Carousel.css
@@ -1,7 +1,7 @@
 .carousel-item img {
   max-height: 1000px;
   object-fit: cover;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .carousel-indicators button {
