--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -68,3 +68,32 @@
     width: auto;
   }
 }
+
+/* Styles for navbar submenu */
+.custom-navbar-submenu {
+  background-color: #294b29;
+  padding: 10px 0;
+}
+
+.custom-navbar-submenu .nav-link {
+  color: #ffffff;
+  margin: 0 10px;
+}
+
+.custom-navbar-submenu .nav-link:hover {
+  color: #ffc107;
+  text-decoration: underline;
+}
+
+/* Additional styles for submenu items */
+.custom-submenu-item {
+  margin-right: 20px;
+}
+
+.custom-submenu-link {
+  font-size: 1.2rem;
+}
+
+.custom-submenu-link:hover {
+  color: #ffc107;
+}
