--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -25,9 +25,11 @@
     0 16px 32px rgba(21, 30, 40, 0.07), 0 32px 64px rgba(21, 30, 40, 0.07) !important;
 }
 
-.a-none,
-.a-none:hover {
+.a-none {
   text-decoration: none;
+}
+.a-none:hover {
+  text-decoration: underline;
 }
 
 .card-outline {
