--- a/src/css/AllProduct.css
+++ b/src/css/AllProduct.css
@@ -1,56 +1,3 @@
-/* Styling for the product cards in the All Products section */
-.all-products-section .our-produk-card {
-  border-radius: 8px;
-  overflow: hidden;
-  background-color: #ffffff;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  border: 1px solid #ddd;
-  padding: 20px;
-}
-
-.all-products-section .our-produk-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-/* Styling for the image inside the product card */
-.all-products-section .our-produk-card .card-img-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 200px; /* Consistent height for all images */
-  overflow: hidden; /* Hide overflow to crop the images */
-  /*border-bottom: 1px solid #ddd; */
-}
-
-.all-products-section .our-produk-card .card-img-container img {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
-
-/* Styling for the title and text inside the product card */
-.all-products-section .our-produk-card .card-body {
-  text-align: center;
-  padding: 2rem 0;
-}
-
-.all-products-section .our-produk-card .card-title {
-  font-size: 1.25rem;
-  margin-bottom: 0.5rem;
-  color: #333333;
-}
-
-.all-products-section .our-produk-card .card-text {
-  font-size: 1rem;
-  color: #333333;
-}
-
 /* Styling for the category sidebar */
 .card-category {
   border: 1px solid #ddd;
@@ -92,3 +39,8 @@
 .all-products-section {
   padding: 20px;
 } */
+.card-title {
+  height: 100px; /* Adjust this height as needed */
+  overflow: hidden;
+  word-wrap: break-word; /* Allow long words to break and wrap */
+}
