--- a/src/css/ProductByCategory.css
+++ b/src/css/ProductByCategory.css
@@ -3,11 +3,11 @@
 }
 
 .container-pcategory h1 {
-  margin-top: 75px;
+  /* margin-top: 75px; */
   margin-bottom: 35px;
   text-align: center;
 }
-
+/* 
 .card-category {
   padding-top: 25px;
   border-radius: 8px;
@@ -27,7 +27,7 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-/* Styling for the image inside the product card */
+
 .card-category .card-img-top {
   width: 100%;
   height: 200px;
@@ -35,4 +35,4 @@
   max-height: 100%;
   object-fit: contain;
   margin: auto;
-}
+} */
