--- a/src/css/AllProduct.css
+++ b/src/css/AllProduct.css
@@ -40,7 +40,7 @@
   padding: 20px;
 } */
 
-.card-title {
+.card-title-allproduct {
   height: 50px; /* Adjust this height as needed */
   overflow: hidden;
   word-wrap: break-word; /* Allow long words to break and wrap */
