--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -171,7 +171,7 @@
   margin-bottom: 0.5rem;
 }
 
-.btn {
+.btn-hero {
   display: inline-block;
   background-color: transparent;
   color: #294b29;
@@ -183,7 +183,7 @@
   transition: 0.8s ease;
 }
 
-.btn:hover {
+.btn-hero:hover {
   background-color: #294b29;
   color: #ffffff;
 }
