add style for homepage and add new profile page

--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -504,6 +504,7 @@
 .accordion-button:not(.collapsed) {
   background-color: #294b29d8;
   color: #e8e5e5;
+  border-radius: 10px;
 }
 
 .accordion-button:focus {
