--- a/src/css/ProductDetail.css
+++ b/src/css/ProductDetail.css
@@ -19,8 +19,8 @@
 }
 
 .product-image {
-  width: 450px;
-  height: 600px;
+  width: 100%;
+  height: 400px; /* Anda dapat menyesuaikan tinggi sesuai kebutuhan */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -29,9 +29,9 @@
 }
 
 .product-image img {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover; /* Memastikan gambar mencakup seluruh area tanpa distorsi */
 }
 
 .product-details {
