push dulu style nanti

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -13,7 +13,7 @@ footer a.navbar-brand:hover {
 }
 
 .footer-2 {
-  background-color: #294b29;
+  background-color: #121d12;
   border-top: 1px solid white;
 }
 
