--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -436,8 +436,8 @@
 }
 
 .card-category-product {
-  font-size: 1rem;
-  color: #333333;
+  font-size: 0.9rem;
+  color: #6b6b6b;
   margin-top: auto;
 }
 
