--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -342,6 +342,24 @@
   font-weight: 900; /* Ubah warna sesuai keinginan */
 }
 
+.faq-heading::before,
+.faq-heading::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 30%;
+  height: 2px;
+  background-color: #dee2e6;
+}
+
+.faq-heading::before {
+  left: 0;
+}
+
+.faq-heading::after {
+  right: 0;
+}
+
 .faq-subheading {
   text-align: center;
   margin-bottom: 30px;
@@ -440,7 +458,7 @@
 }
 
 .card-title {
-  height: 40px; /* Adjust this height as needed */
+  /* height: 40px; Adjust this height as needed */
   overflow: hidden;
   word-wrap: break-word; /* Allow long words to break and wrap */
 }
@@ -457,4 +475,21 @@
 .add-to-cart-btn:hover {
   background-color: #697d74;
   color: white;
+}
+.card .card-img-top {
+  width: 100%;
+  height: 150px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  margin: auto;
+}
+
+.card-img-product {
+  width: 100%;
+  height: 400px;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  margin: auto;
 }
